[BlackBerry] Text not selected when input field focused. https://bugs.webkit.org/show_bug.cgi?id=103182

Patch by Genevieve Mak <gmak@rim.com> on 2012-11-24
Reviewed by George Staikos.

Reviewed Internally by: Mike Fenton, Eli Fidler
PR #250163

* WebKitSupport/SelectionHandler.cpp:
(BlackBerry::WebKit::SelectionHandler::selectObject):

Canonical link: https://commits.webkit.org/121315@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@135655 268f45cc-cd09-0410-ab3c-d52691b4dbfc